--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ navbar:
   left:
     - text: "Home"
       href: index.html
+    - text: "ソースコード"
+      href: code.html
     - text: "正誤表"
       href: errata.html
     - text: "About"
