--- a/_site.yml
+++ b/_site.yml
@@ -3,13 +3,13 @@ output_dir: "docs"
 navbar: 
   title: "『行動データの計算論モデリング』"
   left:
-    - text: "Home"
+    - text: "トップ"
       href: index.html
-    - text: "ソースコード"
+    - text: "Rコードのリスト"
       href: code.html
     - text: "正誤表"
       href: errata.html
-    - text: "About"
+    - text: "その他"
       href: about.html
 output:
   html_document:
